infrastructure/somleng/modules/nat_instance/sg.tf
# https://docs.aws.amazon.com/vpc/latest/userguide/VPC_NAT_Instance.html#NATSG

resource "aws_security_group" "this" {
  name   = "nat-instance"
  vpc_id = var.vpc.vpc_id
}

resource "aws_security_group_rule" "egress" {
  type              = "egress"
  to_port           = 0
  protocol          = "-1"
  from_port         = 0
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "ingress" {
  type              = "ingress"
  to_port           = 0
  protocol          = "-1"
  from_port         = 0
  security_group_id = aws_security_group.this.id
  cidr_blocks       = var.vpc.private_subnets_cidr_blocks
}
